--- a/05-Evaluacion.ipynb
+++ b/05-Evaluacion.ipynb
@@ -180,6 +180,15 @@
     "hadoop jar $STREAM -input input.txt -output output  -mapper mapper.py -reducer reducer.py\n",
     "cat output/part-00000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -rf mapper.py reducer.py output input.txt"
+   ]
   }
  ],
  "metadata": {
@@ -198,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   },
   "toc": {
    "base_numbering": 1,
